[gd_scene load_steps=17 format=3 uid="uid://denqvxcrwbbln"]

[ext_resource type="Script" uid="uid://cebcwfkm01mc4" path="res://missions/mission_10.gd" id="1_6afb0"]
[ext_resource type="Texture2D" uid="uid://c3rbq7njvoaf0" path="res://art/ice_floor3.png" id="2_k73q1"]
[ext_resource type="PackedScene" uid="uid://cnewpfj0saicm" path="res://missions/Hud_Mission.tscn" id="3_rfwf0"]
[ext_resource type="AudioStream" uid="uid://532t1b3ql5ff" path="res://sound/bgm.mp3" id="4_lbmcf"]
[ext_resource type="Script" uid="uid://be8h6oqce2lfd" path="res://Music.gd" id="5_6bh5d"]
[ext_resource type="AudioStream" uid="uid://rsh6crkjjxk4" path="res://art/gameover.wav" id="6_psuwp"]
[ext_resource type="Script" uid="uid://fh8j43g4cbk6" path="res://DeathBox.gd" id="7_cg01r"]
[ext_resource type="Texture2D" uid="uid://c3avc7vwurlau" path="res://art/water.png" id="8_6vmvd"]
[ext_resource type="Texture2D" uid="uid://dxhgr6yrn6k0m" path="res://art/water2.png" id="9_qgjlv"]
[ext_resource type="PackedScene" uid="uid://dtevh17wsaoom" path="res://Player.tscn" id="10_wqcb6"]
[ext_resource type="PackedScene" uid="uid://br3kfb1p5grst" path="res://missions/DummyPenguin.tscn" id="12_fjnqh"]
[ext_resource type="Script" uid="uid://b55w86uvrp6e0" path="res://missions/follow_line_2d.gd" id="13_at72v"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_2lshl"]
frames = 2
speed_scale = 2.0
frame_0/texture = ExtResource("8_6vmvd")
frame_1/texture = ExtResource("9_qgjlv")
frame_1/duration = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xy06k"]
size = Vector2(480, 80)

[sub_resource type="Curve2D" id="Curve2D_6afb0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 92.4154, -141.564, 0, 0, 0, 0, 66.2777, -110.837, 0, 0, 0, 0, 40.14, -80.1097, 0, 0, 0, 0, 14.0023, -49.3827, 0, 0, 0, 0, -12.1354, -18.6557, 0, 0, 0, 0, -34.5391, 7.68175, 0, 0, 0, 0, -64.4108, 42.7983, 0, 0, 0, 0, -71.8787, 51.5775, 0, 0, 0, 0, -47.1412, 51.5775, 0, 0, 0, 0, -7.00117, 51.5775, 0, 0, 0, 0, 32.6721, 51.5775, 0, 0, 0, 0, 72.3454, 51.5775, 0, 0, 0, 0, 92.4154, 51.5775, 0, 0, 0, 0, 77.4796, 34.0192, 0, 0, 0, 0, 55.0759, 7.68175, 0, 0, 0, 0, 28.9382, -23.0453, 0, 0, 0, 0, 2.80047, -53.7723, 0, 0, 0, 0, -23.3372, -84.4993, 0, 0, 0, 0, -49.4749, -115.226, 0, 0, 0, 0, -71.8787, -141.564, 0, 0, 0, 0, -27.0712, -141.564, 0, 0, 0, 0, 12.6021, -141.564, 0, 0, 0, 0, 52.7421, -141.564, 0, 0, 0, 0, 92.4154, -141.564)
}
point_count = 24

[sub_resource type="CircleShape2D" id="CircleShape2D_r1b70"]
radius = 20.0

[node name="Mission10" type="Node"]
script = ExtResource("1_6afb0")

[node name="ColorRect2" type="ColorRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -152.0
offset_right = 272.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="IceTextureFloor" type="TextureRect" parent="."]
self_modulate = Color(0.972549, 1, 1, 0.784314)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -1.0
offset_right = 120.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k73q1")
expand_mode = 2
stretch_mode = 1
flip_h = true
flip_v = true
metadata/_edit_use_anchors_ = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(57, 68)

[node name="StartLoopPos" type="Marker2D" parent="."]
position = Vector2(74, 168)

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD_Mission" parent="." instance=ExtResource("3_rfwf0")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lbmcf")
script = ExtResource("5_6bh5d")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_psuwp")

[node name="DeathBox" type="Area2D" parent="."]
position = Vector2(0, 720)
collision_mask = 3
script = ExtResource("7_cg01r")

[node name="WaterTexture" type="TextureRect" parent="DeathBox"]
modulate = Color(1, 1, 1, 0.686275)
texture_filter = 1
offset_top = -128.0
offset_right = 480.0
texture = SubResource("AnimatedTexture_2lshl")
expand_mode = 4
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBox"]
position = Vector2(240, -40)
shape = SubResource("RectangleShape2D_xy06k")
debug_color = Color(0.980369, 0, 0.380257, 0.42)

[node name="Player" parent="." instance=ExtResource("10_wqcb6")]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(218, 426)
scale = Vector2(2.1425, 1.8225)
curve = SubResource("Curve2D_6afb0")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(92.4154, -141.564)
scale = Vector2(0.758682, 0.889077)
rotates = false
loop = false

[node name="DummyPenguin" parent="Path2D/PathFollow2D" instance=ExtResource("12_fjnqh")]
position = Vector2(4.41074e-06, 2.0504e-05)

[node name="AnimatedSprite2D" parent="Path2D/PathFollow2D/DummyPenguin" index="2"]
animation = &"down"

[node name="Line2D" type="Line2D" parent="Path2D"]
width = 5.0
script = ExtResource("13_at72v")

[node name="PlayerTrail" type="Line2D" parent="."]

[node name="TrailTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="LoopTrigger" type="Area2D" parent="."]
position = Vector2(74, 168)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoopTrigger"]
shape = SubResource("CircleShape2D_r1b70")

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="finished" from="Music" to="Music" method="_on_finished"]
[connection signal="body_entered" from="DeathBox" to="Player" method="_on_death_box_body_entered"]
[connection signal="fell" from="Player" to="." method="_on_player_fell"]
[connection signal="timeout" from="TrailTimer" to="." method="_on_trail_timer_timeout"]
[connection signal="body_entered" from="LoopTrigger" to="." method="_on_loop_trigger_body_entered"]
[connection signal="body_exited" from="LoopTrigger" to="." method="_on_loop_trigger_body_exited"]

[editable path="Path2D/PathFollow2D/DummyPenguin"]
